syntax = "proto3";

package product.service.v1;
option go_package = "./pb";

import "google/protobuf/empty.proto";

service ProductService {
  rpc CreateProduct(Product) returns (Product);
  rpc GetProduct(ProductID) returns (Product);
  rpc UpdateProduct(Product) returns (Product);
  rpc DeleteProduct(ProductID) returns (ProductID);
  rpc ListProducts(google.protobuf.Empty) returns (ProductList);
}

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message ProductID {
  int32 id = 1;
}

message ProductList {
  repeated Product products = 1;
}
